@@ -65,16 +65,12 @@ public:
 			   );
   }
 
-
-  /*  virtual */void
+  virtual void
   do_local_job(const boost::system::error_code& e,
 	       HandlerPtr hdl,
 	       SessionMsgPtr sesh,
 	       CmdTypePtr cmd,
-	       bool first_call)
-  { }
-	       
-
+	       bool first_call) = 0;
 };
 
 
